# where_to_go

./: .env-example  README.md  pyproject.toml
places/: admin.py  models.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_image.py
templates/: index.html  main.html
where_to_go/: asgi.py  settings.py  urls.py  views.py  wsgi.py
