[tool.poetry]
name = "where_to_go"
version = "0.1.0"
description = "Test project for devman"
authors = ["Dmitrii_Simonov <glooshak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
