[tool.poetry]
name = "where_to_go"
version = "0.1.0"
description = "Test project for devman"
authors = ["Dmitrii_Simonov <glooshak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.isort]
profile = 'pycharm'
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
